--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "discord": "^0.8.2",
-    "discord.js": "^12.2.0"
+    "discord.js": "^12.2.0",
+    "request": "^2.88.2"
   }
 }
